src/gui/image/qicon.cpp
@@ -174,7 +174,7 @@ void QPixmapIconEngine::paint(QPainter *painter, const QRect &rect, QIcon::Mode 
     auto paintDevice = painter->device();
     qreal dpr = paintDevice ? paintDevice->devicePixelRatio() : qApp->devicePixelRatio();
     const QSize pixmapSize = rect.size() * dpr;
-    QPixmap px = pixmap(pixmapSize, mode, state);
+    QPixmap px = scaledPixmap(pixmapSize, mode, state, dpr);
     painter->drawPixmap(rect, px);
 }
 
